Fixed auto dark mode problem

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ html {
   scroll-behavior: smooth;
 }
 
+:root {
+  color-scheme: light;
+}
+
 
 @keyframes fade-up {
   from {
